--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 .App {
   text-align: center;
+ 
+  
+    background: linear-gradient(to bottom, #f0f0f0, #ffffff);
+   
+  
+    
+  
+  
 }
 
 .App-logo {
